# crewai-content-stragtegy

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
content_marketing_system.egg-info/: SOURCES.txt
doc/: High Level Implementation Plan.md  Main System Implementaion.md  Phase A1 - Project Initialization.md  Phase A2 - Knowledge Base Implementation.md  Phase A3 - Basic Agent Structure Implementation.md  Phase B1 - Strategy Agents Implementation.md  Phase B2 - Marketing Agents Implementaion.md  Phase B3 - Content Agents Implementaion.md  Phase C1 - Basic Orchestrator Implementation.md  Phase C2 - Debate Protocol Implementation.md  Phase C3 - Workflow Management.md  Phase E1 - Basic Dashboard Implementation.md  Phase E2 - Workflow Visualization.md  Phase E3 - Workflow Visualization Real-Time Updates.md  Quick Start Guide.md  README.md  Remain Works.md  System Design.md
doc/MVP/: Implementation Plan.md  Implementation Tasks.md  MVP Phases.md  Migration Strategy.md
doc/design/: Debate Protocol.md  Human Interface.md  System Overview.md
doc/framework/: AI-Human Content Marketing Collaboration Framework.md  Content Marketing Framework.md  Highlevel Framework.md  Level 1. Business Strategy Conversation Framework.md  dsl specification.md
src/: app.py
src/agents/: __init__.py  adapters.py  base.py  core.py  decorators.py  exceptions.py  marketing.py  memory.py  metrics.py  mock_data.py  models.py  orchestrator.py  strategy.py  task.py  (+6 more)
tests/: conftest.py  test_initialization.py  test_knowledge_base.py
(+52 files in other folders)
