[project]
name = "content_marketing_system"
version = "0.1.0"
dependencies = [
    "crewai>=0.1.0",
    "streamlit>=1.24.0",
    "llmlingua>=0.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]